--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <!-- HEADER -->
+    <header>
+        <img src="img/logo.svg" alt="Logo">
+    </header>
+    <!-- /HEADER -->
     
 </body>
 </html>
