section del titolo completata

--- a/index.html
+++ b/index.html
@@ -13,6 +13,32 @@
         <img src="img/logo.svg" alt="Logo">
     </header>
     <!-- /HEADER -->
+
+    <!-- MAIN -->
+    <main>
+        <div class="container">
+
+            <!-- SECTION: TITLE -->
+            <section>
+                <div class="title">
+                    <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+                    <p class="autor">Scritto da <a href="#">The Booleaner</a></p>
+                    <p>il 10/10/20</p>
+                </div>
+
+                <div class="title-img">
+                    <img src="img/tim-1.jpg" alt="Tim Berners-Lee">
+                    <img src="img/tim-2.jpg" alt="Tim Berners-Lee">
+                    <p>1st Photo: John S. and James L.Knight Foundation, by Scott Henrichsen</p>
+                    <p>2nd Photo: Wikimedia, by Paul Clarke</p>
+                </div>
+            </section>
+           <!-- /SECTION: TITLE -->
+
+        </div>
+
+    </main>
+    <!-- /MAIN -->
     
 </body>
 </html>
