--- a/index.html
+++ b/index.html
@@ -29,14 +29,22 @@
                 <div class="title-img">
                     <img src="img/tim-1.jpg" alt="Tim Berners-Lee">
                     <img src="img/tim-2.jpg" alt="Tim Berners-Lee">
+                </div>
+
+                <div class="copyrights">
                     <p>1st Photo: John S. and James L.Knight Foundation, by Scott Henrichsen</p>
                     <p>2nd Photo: Wikimedia, by Paul Clarke</p>
                 </div>
             </section>
            <!-- /SECTION: TITLE -->
 
-        </div>
+            <!-- SECTION ARTICLE -->
+           <section>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh tincidunt ut laoreet dolore magna aliquam erat volupat. Ut wisi enim ad minim veniam quis nostrud <span>exerci tation ullamcorper sucipit lobortis nisl ut aliquip ex ea commodo consequat</span>. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feufait nulla ficilisi</p>
+           </section>
+           <!-- /SECTIO ARTICLE -->
 
+        </div>
     </main>
     <!-- /MAIN -->
     
