'Section Article' parzialmente completata

--- a/index.html
+++ b/index.html
@@ -39,14 +39,21 @@
            <!-- /SECTION: TITLE -->
 
             <!-- SECTION ARTICLE -->
-           <section>
+           <section class="article">
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh tincidunt ut laoreet dolore magna aliquam erat volupat. Ut wisi enim ad minim veniam quis nostrud <span>exerci tation ullamcorper sucipit lobortis nisl ut aliquip ex ea commodo consequat</span>. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feufait nulla ficilisi</p>
+
+                <ul>
+                    <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh tincidunt ut laoreet dolore magna aliquam erat volupat.</li>
+                    <li>Ut wisi enim ad minim veniam quis nostrud exerci tation ullamcorper sucipit lobortis nisl ut aliquip ex ea commodo consequat</li>
+                    <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh tincidunt ut laoreet dolore magna aliquam erat volupat.</li>
+                </ul>
+               
            </section>
-           <!-- /SECTIO ARTICLE -->
+           <!-- /SECTION ARTICLE -->
 
         </div>
     </main>
     <!-- /MAIN -->
-    
+   
 </body>
 </html>
