'Section Article' completata

--- a/index.html
+++ b/index.html
@@ -47,9 +47,14 @@
                     <li>Ut wisi enim ad minim veniam quis nostrud exerci tation ullamcorper sucipit lobortis nisl ut aliquip ex ea commodo consequat</li>
                     <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh tincidunt ut laoreet dolore magna aliquam erat volupat.</li>
                 </ul>
-               
            </section>
            <!-- /SECTION ARTICLE -->
+
+           <!-- SECTION TABLE -->
+           <section>
+
+           </section>
+           <!-- /SECTION TABLE -->
 
         </div>
     </main>
