'section table' completata

--- a/index.html
+++ b/index.html
@@ -52,7 +52,40 @@
 
            <!-- SECTION TABLE -->
            <section>
+                <table>
 
+                    <thead>
+                        <tr>
+                            <th>Lorem ipsum dolor</th>
+                            <th>Lorem ipsum dolor</th>
+                            <th>Lorem ipsum dolor</th>
+                        </tr>
+                    </thead>
+
+                    <tbody class="table-colored">
+                        <tr>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, ut aspernatur. Nulla ratione iusto in. Totam magnam nesciunt enim, sint id cum ut ipsum, veritatis voluptatibus consequatur eius, amet quo.</td>
+                        </tr>
+                    </tbody>
+
+                    <tbody>
+                        <tr>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, ut aspernatur. Nulla ratione iusto in. Totam magnam nesciunt enim, sint id cum ut ipsum, veritatis voluptatibus consequatur eius, amet quo.</td>
+                        </tr>
+                    </tbody>
+
+                    <tbody class="table-colored">
+                        <tr>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, ut aspernatur. Nulla ratione iusto in. Totam magnam nesciunt enim, sint id cum ut ipsum, veritatis voluptatibus consequatur eius, amet quo.</td>
+                        </tr>
+                    </tbody>
+                </table>
            </section>
            <!-- /SECTION TABLE -->
 
