--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
     </header>
     <!-- /HEADER -->
 
-    <!-- MAIN -->
-    <main>
-        <div class="container">
+    <div class="container">
+
+        <!-- MAIN -->
+        <main>
 
             <!-- SECTION: TITLE -->
             <section>
                 <div class="title">
                     <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-                    <p class="autor">Scritto da <a href="#">The Booleaner</a></p>
+                    <p class="author">Scritto da <a href="#">The Booleaner</a></p>
                     <p>il 10/10/20</p>
                 </div>
 
@@ -94,10 +95,26 @@
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh tincidunt ut laoreet dolore magna aliquam erat volupat. Ut wisi enim ad minim veniam quis nostrud exerci tation ullamcorper sucipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel <span>illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto</span> odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feufait nulla ficilisi</p>
            </section>
            <!-- /SECTION ARTICLE -->
+        </main>
+        <!-- /MAIN -->
 
-        </div>
-    </main>
-    <!-- /MAIN -->
-   
+        <!-- FOOTER -->
+        <footer>
+            <span>Potrebbero interessarti</span>
+
+            <div class="box">
+                <div class="first-image">
+                    <h3>Lorem ipsum dolor</h3>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="second-image">
+                    <h3>Lorem ipsum dolor</h3>
+                </div>
+            </div>
+        </footer>
+        <!-- /FOOTER -->
+    </div>
 </body>
 </html>
