--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <!-- HEADER -->
     <header>
-        <img src="img/logo.svg" alt="Logo">
+        <div class="container">
+            <img src="img/logo.svg" alt="Logo">
+        </div>
     </header>
     <!-- /HEADER -->
 
@@ -105,13 +107,13 @@
 
             <div class="box">
                 <div class="first-image">
-                    <h3>Lorem ipsum dolor</h3>
+                    <a href="#">Lorem ipsum dolor</a>
                 </div>
             </div>
 
             <div class="box">
                 <div class="second-image">
-                    <h3>Lorem ipsum dolor</h3>
+                    <a href="#">Lorem ipsum dolor</a>
                 </div>
             </div>
         </footer>
